--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -10,11 +10,10 @@ jobs:
     - uses: actions/checkout@v3.1.0
     - uses: cachix/install-nix-action@v18
       with:
-        install_url: https://nixos-nix-install-tests.cachix.org/serve/vij683ly7sl95nnhb67bdjjfabclr85m/install
-        install_options: '--tarball-url-prefix https://nixos-nix-install-tests.cachix.org/serve'
         extra_nix_config: |
-          experimental-features = nix-command flakes
           access-tokens = github.com=${{ secrets.GITHUB_TOKEN }}
+    - run: nix build
+    - run: nix flake check
     - run: nix flake update
     - name: Commit changes
       env:
