--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,4 +7,4 @@ jobs:
     - uses: actions/checkout@v4.1.1
     - uses: DeterminateSystems/nix-installer-action@v9
     - uses: DeterminateSystems/magic-nix-cache-action@v3
-    - run: nix build .#nixosConfigurations.elbrus.config.system.build.toplevel
+    - run: nix build --keep-going .#nixosConfigurations.elbrus.config.system.build.toplevel
