--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,6 +8,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     steps:
     - name: Maximize build space
+      if: runner.os == 'Linux'
       uses: easimon/maximize-build-space@v10
       with:
         remove-dotnet: 'true'
