--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -29,4 +29,5 @@ jobs:
         endpoint: ${{ vars.ATTIC_ENDPOINT }}
         cache: ${{ vars.ATTIC_CACHE }}
         token: ${{ secrets.ATTIC_TOKEN }}
-    - run: TMPDIR=/mnt nixci -- --refresh -j auto --keep-going
+          #    - run: TMPDIR=/mnt nixci -- --refresh -j auto --keep-going
+          - run: cat /etc/nix/nix.conf 
