--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -29,4 +29,4 @@ jobs:
         endpoint: ${{ vars.ATTIC_ENDPOINT }}
         cache: ${{ vars.ATTIC_CACHE }}
         token: ${{ secrets.ATTIC_TOKEN }}
-    - run: nixci -- --refresh -j auto --keep-going; sudo dmesg; sudo journalctl -e
+    - run: nixci -- --refresh -j auto --keep-going || true; sudo dmesg; sudo journalctl -e
