--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -30,4 +30,6 @@ jobs:
         cache: ${{ vars.ATTIC_CACHE }}
         token: ${{ secrets.ATTIC_TOKEN }}
     - run: nix --version
-      #    - run: nixci -- --refresh -j auto --keep-going || true; sudo dmesg; sudo journalctl -e
+    - run: nixci -- --refresh -j auto --keep-going || true; sudo dmesg; sudo journalctl -e
+      env:
+        TMPDIR: /mnt
