--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,6 +19,8 @@ jobs:
         remove-docker-images: 'true'
     - uses: actions/checkout@v4.1.1
     - uses: DeterminateSystems/nix-installer-action@v9
+      with:
+        nix-installer-tag: 'v0.15.1'
     - uses: DeterminateSystems/magic-nix-cache-action@v3
     - uses: yaxitech/nix-install-pkgs-action@v3
       with:
