--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,15 +8,15 @@ jobs:
         os: [ubuntu-latest, macos-14]
     runs-on: ${{ matrix.os }}
     steps:
-    - name: Maximize build space
-      if: runner.os == 'Linux'
-      uses: AdityaGarg8/remove-unwanted-software@v2
-      with:
-        remove-dotnet: 'true'
-        remove-android: 'true'
-        remove-haskell: 'true'
-        remove-codeql: 'true'
-        remove-docker-images: 'true'
+      #- name: Maximize build space
+      #if: runner.os == 'Linux'
+      #uses: AdityaGarg8/remove-unwanted-software@v2
+      #with:
+      #  remove-dotnet: 'true'
+      #  remove-android: 'true'
+      #  remove-haskell: 'true'
+      #  remove-codeql: 'true'
+      #  remove-docker-images: 'true'
     - uses: actions/checkout@v4.1.1
     - uses: DeterminateSystems/nix-installer-action@v9
       with:
