--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,12 +23,12 @@ jobs:
       #- uses: yaxitech/nix-install-pkgs-action@v3
       #with:
       #  packages: "nixpkgs#nixci"
-    - name: Setup Attic cache
-      uses: ryanccn/attic-action@v0
-      with:
-        endpoint: ${{ vars.ATTIC_ENDPOINT }}
-        cache: ${{ vars.ATTIC_CACHE }}
-        token: ${{ secrets.ATTIC_TOKEN }}
+      #- name: Setup Attic cache
+      #uses: ryanccn/attic-action@v0
+        #with:
+        #endpoint: ${{ vars.ATTIC_ENDPOINT }}
+          #cache: ${{ vars.ATTIC_CACHE }}
+          #    token: ${{ secrets.ATTIC_TOKEN }}
     - run: nix --version
     - run: nix build --refresh -j 1 --keep-going .#nixosConfigurations.normandy.config.system.build.toplevel || true; sudo dmesg; sudo journalctl -e; df -h
       #env:
