--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -30,6 +30,6 @@ jobs:
         cache: ${{ vars.ATTIC_CACHE }}
         token: ${{ secrets.ATTIC_TOKEN }}
     - run: nix --version
-    - run: nix build --refresh -j 1 --keep-going .#nixosConfigurations.normandy.config.system.build.toplevel || sudo dmesg && sudo journalctl -e
+    - run: nix build --refresh -j 1 --keep-going .#nixosConfigurations.normandy.config.system.build.toplevel || sudo dmesg && sudo journalctl -e && exit 1
       #env:
       #  TMPDIR: /mnt
