--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,9 +20,6 @@ jobs:
     - uses: actions/checkout@v4.1.1
     - uses: DeterminateSystems/nix-installer-action@v9
     - uses: DeterminateSystems/magic-nix-cache-action@v3
-#    - uses: yaxitech/nix-install-pkgs-action@v3
-#      with:
-#        packages: "nixpkgs#nixci"
     - name: Setup Attic cache
       uses: ryanccn/attic-action@v0
       with:
@@ -31,4 +28,4 @@ jobs:
         token: ${{ secrets.ATTIC_TOKEN }}
     - name: Install omnix
       run: nix --accept-flake-config profile install "github:juspay/omnix"
-    - run: om ci -- --refresh -j auto --keep-going
+    - run: om ci run  -- --refresh -j auto --keep-going
