--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -5,7 +5,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [ubuntu-latest, macos-14]
+        os: [memes-ubuntu, macos-14]
     runs-on: ${{ matrix.os }}
     steps:
     - name: Maximize build space
