--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,17 +8,17 @@ jobs:
         os: [memes-ubuntu, macos-14]
     runs-on: ${{ matrix.os }}
     steps:
-    - name: Maximize build space
-      if: runner.os == 'Linux'
-      uses: AdityaGarg8/remove-unwanted-software@v4
-      with:
-        remove-dotnet: 'true'
-        remove-android: 'true'
-        remove-haskell: 'true'
-        remove-codeql: 'true'
-        remove-docker-images: 'true'
-        remove-large-packages: 'true'
-        remove-cached-tools: 'true'
+    # - name: Maximize build space
+    #   if: runner.os == 'Linux'
+    #   uses: AdityaGarg8/remove-unwanted-software@v4
+    #   with:
+    #     remove-dotnet: 'true'
+    #     remove-android: 'true'
+    #     remove-haskell: 'true'
+    #     remove-codeql: 'true'
+    #     remove-docker-images: 'true'
+    #     remove-large-packages: 'true'
+    #     remove-cached-tools: 'true'
     - uses: actions/checkout@v4.2.2
     - uses: DeterminateSystems/nix-installer-action@v15
     - uses: DeterminateSystems/magic-nix-cache-action@main
