--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,6 +21,9 @@ jobs:
     #     remove-cached-tools: 'true'
     - uses: actions/checkout@v4.2.2
     - uses: DeterminateSystems/nix-installer-action@v15
+      with:
+        extra-conf: |
+          build-dir = /opt/nix-build
     - uses: DeterminateSystems/magic-nix-cache-action@main
     - name: Setup Attic cache
       uses: rhysmdnz/attic-action@v0
