--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -26,7 +26,7 @@ jobs:
           build-dir = /opt
     - uses: DeterminateSystems/magic-nix-cache-action@main
     - name: Setup Attic cache
-      uses: rhysmdnz/attic-action@v0
+      uses: ryanccn/attic-action@v0.3.1
       with:
         endpoint: ${{ vars.ATTIC_ENDPOINT }}
         cache: ${{ vars.ATTIC_CACHE }}
