--- a/renovate.json
+++ b/renovate.json
@@ -18,6 +18,9 @@
       "matchManagers": [
         "nix"
       ],
+      "matchPackageNames": [
+        "*"
+      ],
       "enabled": false
     }
   ]
