--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -26,6 +26,9 @@ jobs:
       with:
         extra-conf: |
           build-dir = /opt
+          download-buffer-size = 524288000
+          extra-substituters = https://nix-community.cachix.org
+          extra-trusted-public-keys = nix-community.cachix.org-1:mB9FSh9qf2dCimDSUo8Zy7bkq5CX+/rkCWyvRCYg3Fs=
     - name: Setup Attic cache
       uses: ryanccn/attic-action@v0.3.1
       with:
