--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -31,6 +31,7 @@ jobs:
             extra-trusted-public-keys = nix-community.cachix.org-1:mB9FSh9qf2dCimDSUo8Zy7bkq5CX+/rkCWyvRCYg3Fs=
       - run: nix config show
       - run: cat /etc/nix/nix.conf
+      - run: cat /etc/nix/nix.custom.conf
       - name: Setup Attic cache
         uses: ryanccn/attic-action@v0.3.1
         with:
