--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -38,7 +38,7 @@ jobs:
           cache: ${{ vars.ATTIC_CACHE }}
           token: ${{ secrets.ATTIC_TOKEN }}
       - run: |
-          echo /etc/nix/nix.custom.conf >> ~/.config/nix/nix.conf
+          cat /etc/nix/nix.custom.conf >> ~/.config/nix/nix.conf
       - name: Install omnix
         run: nix --accept-flake-config profile install "github:juspay/omnix"
       - run: nix config show
