--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,7 +12,7 @@ jobs:
     steps:
       - name: Maximize build space
         if: runner.os == 'Linux'
-      - uses: wimpysworld/nothing-but-nix@v6
+        uses: wimpysworld/nothing-but-nix@v6
         with:
           hatchet-protocol: 'cleave'  # Options: holster, carve, cleave (default), rampage
       - uses: actions/checkout@8e8c483db84b4bee98b60c0593521ed34d9990e8 # v6.0.1
